# Mixtapes

./: .gitignore  AppImageBuilder.yml  README.md  com.pocoguy.Muse.metainfo.xml  com.pocoguy.Muse.yaml  flake.nix  mixtapes.spec  requirements-windows.txt  requirements.txt  start.bat
.github/workflows/: aur-update.yml  build-appimage.yml  build-flatpak.yml  build-windows.yml
aur-package/: PKGBUILD  mixtapes-git.install
src/: main.py  muse.gresource.xml
src/api/: client.py
src/player/: cache.py  discord_rpc.py  downloads.py  mpris.py  player.py  smtc.py
src/ui/: desktop_cover_view.py  expanded_player.py  login.py  login_webview_win.py  player_bar.py  queue_panel.py  style.css  tray_win.py  utils.py  window.py
src/ui/pages/: artist.py  base_playlist.py  category.py  discography.py  home.py  library.py  playlist.py  search.py
src/ui/widgets/: song_row.py
windows/: installer.iss  launcher.c  launcher.rc  login_helper.py
windows/bridge/: Cargo.toml  bridge.rc  build.rs  launcher.rc
windows/bridge/src/: bridge.rs  launcher.rs
