[package]
name = "mixtapes-bridge"
version = "0.1.0"
edition = "2021"
description = "Native Windows bridge for Mixtapes - SMTC and launcher"

[[bin]]
name = "MixtapesBridge"
path = "src/bridge.rs"

[[bin]]
name = "Mixtapes"
path = "src/launcher.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.61", features = [
    "Media",
    "Media_Playback",
    "Storage_Streams",
    "Foundation",
] }
windows-sys = { version = "0.59", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Console",
] }

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "s"
strip = true
lto = true
